syntax = "proto3";
option go_package = ".;proto";
import "google/protobuf/empty.proto";

service User {
  rpc GetUserList(PageInfo) returns (UserListResponse);
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);
  rpc GetUserById(UserIdRequest) returns (UserInfoResponse);
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse);
  rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty);
  rpc CheckPassword(CheckPasswordInfo) returns (CheckResponse);
}

message CheckResponse {
  bool success = 1;
}

message CheckPasswordInfo{
  string password = 1;
  string encryptedPassword = 2;
}

message PageInfo {
  uint32 pn = 1;
  uint32 pSize = 2;
}

message UserListResponse {
  int32  total = 1;
  repeated UserInfoResponse userInfo = 2;
}

message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickname = 4;
  uint64 birthday = 5;
  string gender = 6;
  int32 role = 7;
}

message MobileRequest{
  string mobile = 1;
}

message UserIdRequest{
  int32 id = 1;
}

message CreateUserInfo {
  string nickname = 1;
  string password = 2;
  string mobile = 3;
}

message UpdateUserInfo {
  int32 id = 1;
  string nickname = 2;
  string gender = 3;
  uint64 birthday = 4;
}
